[2022-06-29]
- I update the emulator to work with the latest AzerothCore api.
- An issue template is added, to report bugs.